feat: setup a product route for post mehtod

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-1",
+  "name": "apollo-assignment-2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Assignment for PH Level-2 course",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
