--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Assignment for PH Level-2 course",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node ./dist/server.js",
+    "start": "tsc",
+    "build": "node ./dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "pnpm exec eslint src --fix",
