--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "pnpm exec eslint src --fix",
     "format:fix": "pnpm exec prettier --write src",
-    "format": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\""
   },
   "keywords": [],
   "author": "",
